# shelly-halloween-script

./: config.json  main.py  pyproject.toml
