[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Konstantin <qdog86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
